--- a/src/templates/partials/_navbar.html
+++ b/src/templates/partials/_navbar.html
@@ -42,6 +42,17 @@
 
         <ul class="navbar-nav ml-auto">
         <!--condicional si está autenticado-->
+            <li 
+            {% if 'carrito' in request.path %}
+            class="nav-item active mr-3"
+            {% else %}
+            class="nav-item mr-3"
+            {% endif %}>
+                <a class="nav-link" href="{% url 'ingresar' %}">
+                <i class="fas fa-shopping-cart"></i>
+
+                Carrito</a>
+            </li>
         {% if user.is_authenticated %}
             <li 
             {% if 'dashboard' in request.path %}
@@ -86,6 +97,7 @@
                 Ingresar</a>
             </li>
         {% endif %}
+        
         
         </ul>
     </div>
